Improved Profile view + created factoryService + route access

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,8 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="bi bi-person-circle"></i> {{ app.user.username }}
+                            <i class="bi bi-person-circle"></i> 
+                            {{ app.user.firstName and app.user.lastName ? (app.user.firstName ~ ' ' ~ app.user.lastName)|title : app.user.username|title }}
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{{ path('profile') }}">Profile</a>
