--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -1,34 +1,53 @@
-{# templates/profile/index.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}Profile{% endblock %}
 
 {% block body %}
-    <div class="row justify-content-center mt-5">
-        <div class="col-md-8">
-            <div class="card mt-4">
-                <div class="card-header">
-                    <h3 class="card-title">Profile Information</h3>
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-md-3 text-center">
-                            <img src="{{user.avatar}}" class="img-fluid rounded-circle" alt="Profile Picture">
-                        </div>
-                        <div class="col-md-9">
-                            <h4>{{ user.username }}</h4>
-                            <p>Email: {{ user.email }}</p>
-                            <p>Location: Paris, France</p>
-                            <p>Bio: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">Edit Profile</a>
+<div class="row justify-content-center mt-5">
+    <div class="col-md-8">
+        <div class="card mt-4">
+            <div class="card-header">
+                <h3 class="card-title">Profile Information</h3>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-3 text-center">
+                        <img src="{{ user.avatar }}" class="img-fluid rounded-circle" alt="Profile Picture">
+                        <div class="mt-3">
+                            {% if app.user.googleId %}
+                                <i class="bi bi-google text-success" style="font-size: 1.5rem;"></i>
+                            {% endif %}
+                            {% if app.user.githubId %}
+                                <i class="bi bi-github text-secondary" style="font-size: 1.5rem;"></i>
+                            {% endif %}
+                            {% if app.user.discordId %}
+                                <i class="bi bi-discord text-darkBlue" style="font-size: 1.5rem;"></i>
+                            {% endif %}
                         </div>
                     </div>
-                </div>
-                <div class="card-footer">
-                    <a href="{{ path('app_logout') }}" class="btn btn-danger float-right">Logout</a>
+                    <div class="col-md-9">
+                        <h4>
+                            {% if app.user.firstName or app.user.lastName %}
+                                {{ (app.user.firstName ~ ' ' ~ app.user.lastName)|title }}
+                            {% else %}
+                                {{ app.user.username|title }}
+                            {% endif %}
+                        </h4>
+                        <p>Email: {{ user.email }}</p>
+                        <p>Skills: <span class="badge badge-info">JavaScript</span> <span class="badge badge-info">PHP</span></p>
+                        <p>Interests: <span class="badge badge-warning">Music</span> <span class="badge badge-warning">Gaming</span></p>
+                        <a class="btn btn-primary modalbox-edit-profile mt-3" id="editProfileBtn" data-toggle="modal" data-target="#profileEditModal" data-content-url="{{ path('profile_edit') }}">Edit Profile</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
+</div>
+<div class="modal fade" id="profileEditModal" tabindex="-1" role="dialog" aria-labelledby="profileEditModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-body" id="profileEditModalContent"></div>
+        </div>
+    </div>
+</div>
 {% endblock %}
