--- a/templates/idea/_form.html.twig
+++ b/templates/idea/_form.html.twig
@@ -1,5 +1,3 @@
-
-
 {% block body %}
     <div class="modal-header">
         <h5 class="modal-title">{{ idea is defined ? 'Edit Idea: ' ~ idea.title|capitalize : 'New Idea' }}</h5>
@@ -15,20 +13,18 @@
                 <div class="card-body">
                     {{ form_start(form, {'action': form_action, 'method': 'POST'}) }}
                     
-                    <div class="form-group mb-3">
-                        {{ form_label(form.title) }}
-                        {{ form_widget(form.title, { 'attr': {'class': 'form-control'} }) }}
+                    <div class="mb-3">
+                        {{ form_row(form.title) }}
                     </div>
                     
-                    <div class="form-group mb-3">
-                        {{ form_label(form.description) }}
-                        {{ form_widget(form.description, { 'attr': {'class': 'form-control'} }) }}
+                    <div class="mb-3">
+                        {{ form_row(form.description) }}
                     </div>
                     
                     <div class="row g-3 mb-3">
                         <div class="col">
                             {{ form_label(form.tags) }}
-                            {{ form_widget(form.tags, { 'attr': {'class': 'form-control', 'multiple': 'multiple'} }) }}
+                            {{ form_widget(form.tags, { 'attr': {'class': 'form-control', 'multiple': 'multiple', 'size': '10'} }) }}
                         </div>
                         
                         <div class="col">
@@ -37,8 +33,8 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        {{ form_widget(form.save, { 'attr': {'class': 'btn btn-primary'} }) }}
+                    <div class="mb-3">
+                        {{ form_widget(form.save) }}
                     </div>
                     
                     {{ form_end(form) }}
