--- a/templates/project/_project_header.html.twig
+++ b/templates/project/_project_header.html.twig
@@ -12,6 +12,12 @@
             {% endif %}
         </div>
         <p>{{ project.description|capitalize }}</p>
+        
+        <div class="mt-3">
+            {% for tag in project.tags %}
+                <span class="badge" style="background-color: {{ tag.color }}; color: #fff;">{{ tag.title }}</span>
+            {% endfor %}
+        </div>
     </div>
 
     <div class="col-md-4">
