--- a/templates/project/_form.html.twig
+++ b/templates/project/_form.html.twig
@@ -22,12 +22,12 @@
                             {{ form_widget(form.description, { 'attr': {'class': 'form-control'} }) }}
                         </div>
 
-                        <div class="col">
+                        <div class="form-group">
                             {{ form_label(form.tags) }}
                             {{ form_widget(form.tags, { 'attr': {'class': 'form-control', 'multiple': 'multiple', 'size': '10'} }) }}
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group mt-2">
                             <button type="submit" class="btn btn-primary">{{ project.title ? 'Update Project' : 'Create Project' }}</button>
                         </div>
 
