--- a/templates/project/_project_members.html.twig
+++ b/templates/project/_project_members.html.twig
@@ -9,16 +9,27 @@
         {% endif %}
     </div>
     <ul class="list-group list-group-flush">
-        <li class="project-owner list-group-item ">{{ project.owner.firstName and project.owner.lastName ? (project.owner.firstName ~ ' ' ~ project.owner.lastName)|title : project.owner.username|title }} 👑</li>
+        <li class="project-owner list-group-item d-flex align-items-center">
+            <img src="{{ project.owner.avatar ?? asset('images/concerto.png')}}" class="img-fluid rounded-circle profile-picture" alt="Profile Picture">
+            <span class="ml-2">{{ project.owner.username|title }} 👑</span>
+        </li>
 
         {% for member in project.contributors %}
-            <li class="list-group-item">{{ member.firstName and member.lastName ? (member.firstName ~ ' ' ~ member.lastName)|title : member.username|title }}</li>
+            <li class="list-group-item d-flex align-items-center">
+                <img src="{{ member.avatar ?? asset('images/concerto.png')}}" class="img-fluid rounded-circle profile-picture" alt="Profile Picture">
+                <span class="ml-2">{{ member.username|title }}</span>
+            </li>
         {% endfor %}
     </ul>
 </div>
 
 <style scoped>
-    .project-owner{
+    .profile-picture {
+        width: 30px;
+        height: 30px;
+        object-fit: cover;
+    }
+    .project-owner {
         font-weight: bold;
     }
 </style>
