--- a/templates/project/_idea_comments_modal.html.twig
+++ b/templates/project/_idea_comments_modal.html.twig
@@ -19,6 +19,9 @@
                 <div class="row">
                     <div class="col">
                         <p>{{ idea.description|capitalize }}</p>
+                        <div class="mt-3">
+                            <p><strong>Start Date:</strong> {{ idea.startDate|date('M d, Y') }} </p>
+                        </div>
                         <div class="d-flex align-items-center">
                             <img src="{{ idea.owner.avatar ?? asset('images/concerto.png') }}" alt="{{ idea.owner.username|title }}" class="rounded-circle mr-3" style="width: 50px; height: 50px;">
                             <div>
@@ -165,6 +168,7 @@
             $(document).on('click', '#cancelForm', function() {
                 // Reset form fields if needed
                 $('#commentForm')[0].reset();
+                $('#comment_parentComment').val(null);
 
                 // Move form back to original position
                 $('#formContainer').appendTo('#comment-form-container'); // Adjust as per your container selector
