--- a/templates/project/_idea_card.html.twig
+++ b/templates/project/_idea_card.html.twig
@@ -2,13 +2,30 @@
 <div class="card mb-3 idea-card clickable-card" draggable="true" id="idea-{{ idea.id }}">
     <a href="#" class="card-link modalbox-comments" data-toggle="modal" data-target="#commentsModal" data-content-url="{{ path('idea_comments', {'id': idea.id}) }}">
         <div class="card-content">
-            <h5 class="card-title">{{ idea.title }}</h5>
-            <p class="card-text">{{ idea.description|slice(0, 100) ~ '...'|capitalize }}</p>
-            <p>
+            <h5 class="card-title">{{ idea.title|capitalize }}</h5>
+            <p class="card-text">{{ idea.description|capitalize }}</p>
+            <div class="mt-0">
                 {% for tag in idea.tags %}
                     <span class="badge" style="background-color: {{ tag.color }}; color: #fff;">{{ tag.title }}</span>
                 {% endfor %}
-            </p>
+            </div>
         </div>
     </a>
 </div>
+<style>
+    .card-content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .card-title,
+    .card-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        margin-bottom: 0; /* Remove default bottom margin */
+    }
+
+</style>
